--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 name: tts-hs-hifigan
 channels:
   - defaults
+  - fastchan
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
@@ -13,15 +14,15 @@ dependencies:
   - libstdcxx-ng=11.2.0=h1234567_1
   - ncurses=6.3=h5eee18b_3
   - openssl=1.1.1s=h7f8727e_0
-  - pip=22.2.2=py37h06a4308_0
-  - python=3.7.15=haa1d7c7_0
+  - pip=20.0.2
+  - python=3.8
   - readline=8.2=h5eee18b_0
   - setuptools=65.5.0=py37h06a4308_0
   - sqlite=3.39.3=h5082296_0
   - tk=8.6.12=h1ccaba5_0
   - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.6=h5eee18b_0
-  - zlib=1.2.13=h5eee18b_0
+  - xz=5.2.9
+  - zlib=1.2.13
   - pip:
     - aiosignal==1.3.1
     - appdirs==1.4.4
