--- a/environment.yml
+++ b/environment.yml
@@ -2,26 +2,30 @@ name: tts-hs-hifigan
 channels:
   - defaults
   - fastchan
+  - prometeia 
+  - malfet
+  - jasonb857
+  - bz1
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - ca-certificates=2022.10.11=h06a4308_0
-  - certifi=2022.9.24=py37h06a4308_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - libffi=3.3=he6710b0_2
+  - ca-certificates=2024.3.11
+  - certifi=2024.2.2
+  - ld_impl_linux-64=2.39
+  - libffi=3.3
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
   - libstdcxx-ng=11.2.0=h1234567_1
-  - ncurses=6.3=h5eee18b_3
-  - openssl=1.1.1s=h7f8727e_0
-  - pip=20.0.2
+  - ncurses=6.3
+  - openssl=1.1.1v
   - python=3.8
-  - readline=8.2=h5eee18b_0
-  - setuptools=65.5.0=py37h06a4308_0
-  - sqlite=3.39.3=h5082296_0
-  - tk=8.6.12=h1ccaba5_0
+  - pip=23.3.1
+  - readline=8.2
+  - setuptools=65.5.0
+  - sqlite=3.39.2
+  - tk=8.6.12
   - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.9
+  - xz=5.2.5
   - zlib=1.2.13
   - pip:
     - aiosignal==1.3.1
